cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_141.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:46: error: DEAD_STORE
  The value written to &p (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:46:19: Write of unused value
44.               return -3;
45.           value = (*p++ & 0x1f) << 6;
46.           value |= *p++ & 0x3f;
                        ^
47.           if (value < 0x80)
48.               return -4;
